@@ -1,3 +1,14 @@
+2008-08-30  Daniel Kraft  <d@domob.eu>
+
+	PR fortran/37193
+	* gfortran.dg/use_rename_4.f90: New test.
+	* gfortran.dg/use_rename_5.f90: New test.
+
+2008-06-24  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/36371
+	* gfortran.dg/data_array_5.f90: New test.
+
 2008-09-02  Jakub Jelinek  <jakub@redhat.com>
 
 	PR target/36332
